<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/daily_detail_menu_group" >
        <item
            android:id="@+id/action_refresh"
            android:icon="@drawable/refresh"
            android:orderInCategory="100"
            android:showAsAction="always"
            android:title="@string/refresh"/>
        <item
            android:id="@+id/action_set_date"
            android:orderInCategory="100"
            android:showAsAction="always"
            android:title="@string/date"/>
        <!--
             <item
            android:id="@+id/action_screenShot"
            android:icon="@drawable/screenshot"
            android:orderInCategory="1"
            android:showAsAction="always"
            android:title="@string/screenShot"/>
        -->
        <item
            android:id="@+id/action_calendar"
            android:icon="@drawable/action_calendar_list"
            android:orderInCategory="100"
            android:showAsAction="always"
            android:title="@string/calendar"/>
        <item
            android:id="@+id/action_map"
            android:icon="@drawable/action_map"
            android:orderInCategory="100"
            android:showAsAction="always"
            android:title="@string/map"/>
    </group>
    <group android:id="@+id/main_menu_group" >

        <!--
	    <item
	    android:id="@+id/action_finalize_current_items"
	    android:orderInCategory="100"
	    android:showAsAction="never"
	    android:title="@string/save_calendar_items"/>
        -->
        <item
            android:id="@+id/action_export_database"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/export_database"/>
        <item
            android:id="@+id/action_reset_calendar_items_for_day"
            android:orderInCategory="50"
            android:showAsAction="never"
            android:title="@string/clear_changes"/>
        <!--
     	    <item
	    android:id="@+id/action_delete_all_calendar_items"
	    android:orderInCategory="100"
	    android:showAsAction="never"
	    android:title="@string/delete_calendar_items"/>
	    <item
	    android:id="@+id/action_delete_all_raw_data"
	    android:orderInCategory="100"
	    android:showAsAction="never"
	    android:title="@string/delete_raw_datas"/>
	    <item
	    android:id="@+id/action_clear_changes"
	    android:orderInCategory="100"
	    android:showAsAction="never"
	    android:title="@string/clear_changes"/>
        -->
    </group>

</menu>