<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <Button
        android:id="@+id/restart_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/later" />

    <Button
        android:id="@+id/restart_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/ok" />

    <ImageView
        android:id="@+id/restart_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/restart_to_smartrac"
        android:src="@drawable/smartrac" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restart_ok"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/start_smartrac"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text" />

</RelativeLayout>