<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/smartrac_activity_frame" >

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/split"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/finish_edit"
        android:entries="@array/travel_modes" />

    <Button
        android:id="@+id/finish_edit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/edit_map_end"
        android:layout_marginRight="20dp"
        android:text="@string/modify" />

    <Button
        android:id="@+id/split"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_map_start"
        android:layout_toLeftOf="@+id/finish_edit"
        android:text="@string/split" />

    <Button
        android:id="@+id/edit_map_end"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_map_start"
        android:layout_below="@+id/edit_map_start"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/edit_map_start_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:text="@string/start_time" />

    <Button
        android:id="@+id/edit_map_start"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/edit_map_start_title"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_map_start"
        android:layout_alignBottom="@+id/edit_map_start"
        android:layout_toLeftOf="@+id/spinner"
        android:layout_marginRight="10dp"
        android:text="@string/travel_mode" />

    <TextView
        android:id="@+id/edit_map_end_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_map_end"
        android:layout_alignBottom="@+id/edit_map_end"
        android:layout_alignLeft="@+id/edit_map_start_title"
        android:text="@string/end_time" />

</RelativeLayout>
